--- a/.github/workflows/build-pudh-day3.yaml
+++ b/.github/workflows/build-pudh-day3.yaml
@@ -2,13 +2,13 @@
 name: day4 Build-Push
 
 on:
-  # push:
-  #   branches:
-  #     - main
-  #   paths:
-  #     - 'day3/**' 
-  #     - '.github/workflows/build-push-day3.yml'
-  workflow_dispatch:
+    push:
+    branches:
+     - main
+    paths:
+       - 'Day3/**' 
+       - '.github/workflows/build-push-day3.yml'
+    workflow_dispatch:
 
 jobs:
   build:
@@ -29,6 +29,6 @@ jobs:
       run: aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 851725266652.dkr.ecr.us-east-1.amazonaws.com
     - name: Build, Tag, and Push Docker Image
       run: |
-        cd day3/src
+        cd Day3/src
         docker build -t 851725266652.dkr.ecr.us-east-1.amazonaws.com/flask-app:day4 .
         docker push 851725266652.dkr.ecr.us-east-1.amazonaws.com/flask-app:day4
