--- a/.github/workflows/build-pudh-day3.yaml
+++ b/.github/workflows/build-pudh-day3.yaml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
     - name: Checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3  # Instead of v2
 
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
