--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -1,9 +1,9 @@
-
+#version: '3.8'
 services:
   app:
     build: . 
     ports:
-      - "8000:8000"
+      - "8000:8000"  # Changed from 5000 to 8000
     networks:
       - test_network 
     depends_on:
@@ -11,18 +11,13 @@ services:
         condition: service_healthy
     environment:
       - FLASK_APP=app.py
-      - FLASK_RUN_HOST=0.0.0.0
       - FLASK_RUN_PORT=8000
-    command: flask run --host=0.0.0.0 --port=8000
-    working_dir: /app
-    volumes:
-      - .:/app
-
+      - FLASK_ENV=development
   db:
     image: postgres:latest
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_PASSWORD: "pass123"
       POSTGRES_DB: postgres
     ports:
       - "5432:5432"
@@ -37,9 +32,7 @@ services:
       timeout: 10s
       retries: 10
       start_period: 10s
-
 volumes:
   postgres_data:
-
 networks:
   test_network:
